Squashed 'projector-server/' changes from c3fa6678..2c0e44e6
2c0e44e6 Mention PRJ-472 in changelog
fe73cda3 Bump projector-client version
bef61503 Add missing colon
4959aed7 Make the file similar to JDK 11 one
02a679e2 Remove unused lines
44338c19 Move dependency setting under common server configuration to avoid duplicated code
690adea5 Fix "addTimings must be not called if some events were already added using API"
ad6dbe3e Some changes to support headless JDK 17
0d070f18 update changed version path for server
88fbd846 Bump projector-client version
8baea895 Restore `runProjectorServer` function in ProjectorLauncher
dcc4ae89 Fix getting parent of PWindow
a052ccd0 Fix startup in docker
48ff0772 Add TODO about kotlin gradle API
98cd3799 Move IsWindowHeaderVisibleEnoughTest.kt ro awt-common module
dd753b87 Specify jvm toolchain for Java 11 modules explicitly
876f9007 Revert "Update workflows to use Java 17"
4869129a Reorganize module structure
b9c03fea Improve problems found during review
7b267d2c Fix problems reported by Qodana
6a66e6c0 Fix ImageCacherTest
9d6e99a5 Update notes about Java version
d614c987 Update workflows to use Java 17
3345efae Fix running without X server (e.g. in docker)
bb77880b Support jdk17
ef74069c Bump projector-client version

git-subtree-dir: projector-server
git-subtree-split: 2c0e44e6cc2be38be27a6ccb16d3c8b5feaa8963